--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
         "vue-template-compiler": "^2.6.10"
     },
     "dependencies": {
+        "@tailwindcss/ui": "^0.3.0",
         "@virgilsecurity/e3kit-browser": "^2.3.1",
         "file-loader": "^6.0.0",
         "openpgp": "^4.10.4",
+        "tailwindcss": "^1.4.6",
         "vue-router": "^3.2.0",
         "vuex": "^3.4.0"
     }
